# batch-geo

Batch GEO Automation/backend/: pyproject.toml
Batch GEO Automation/backend/.pytest_cache/v/cache/: lastfailed  nodeids
Batch GEO Automation/backend/app/: auth.py  config.py  jobs.py  main.py  models.py  storage.py
Batch GEO Automation/backend/app/core/: coordinates.py  csv_builder.py  description.py  generator.py  geo.py  keywords.py
Batch GEO Automation/backend/app/data/: maps.db
Batch GEO Automation/backend/app/data/bg-profile/: Local State
Batch GEO Automation/backend/app/data/bg-profile/Default/: Favicons  History  Preferences  Secure Preferences  Top Sites  Web Data
Batch GEO Automation/backend/app/data/bg-profile/Default/DawnGraphiteCache/: index
Batch GEO Automation/backend/app/data/bg-profile/Default/DawnWebGPUCache/: index
Batch GEO Automation/backend/app/data/bg-profile/GrShaderCache/: data_0  data_1  f_000001  f_000002  index
Batch GEO Automation/backend/app/data/bg-profile/GraphiteDawnCache/: index
Batch GEO Automation/backend/app/data/bg-profile/ShaderCache/: index
Batch GEO Automation/backend/app/data/bg-profile/segmentation_platform/: ukm_db
Batch GEO Automation/backend/app/publish/: batchgeo.py
Batch GEO Automation/backend/batchgeo_map_generator.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
Batch GEO Automation/backend/tests/: conftest.py  test_api.py  test_batchgeo.py  test_coordinates.py  test_csv_builder.py  test_description.py  test_generator.py  test_geo.py  test_jobs.py  test_keywords.py  test_models.py  test_storage.py
(+180 files in other folders)
